@@ -5,32 +5,35 @@ import com.example.offerbrowserprototype.domain.dto.aplicationnote.ApplicationNo
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ApplicationNoteMapper {
 
-    public ApplicationNoteDTO toDto(ApplicationNote applicationNote) {
+    public ApplicationNoteDTO toDto(ApplicationNote note) {
         ApplicationNoteDTO dto = new ApplicationNoteDTO();
-        dto.setId(applicationNote.getId());
-        dto.setOfferId(applicationNote.getOfferId());
-        dto.setOfferUrl(applicationNote.getOfferUrl());
-        dto.setCompanyName(applicationNote.getCompanyName());
-        dto.setAppliedAt(applicationNote.getAppliedAt());
+        dto.setId(note.getId());
+        dto.setUserId(note.getUserId());
+        dto.setOfferId(note.getOfferId());
+        dto.setOfferUrl(note.getOfferUrl());
+        dto.setCompanyName(note.getCompanyName());
+        dto.setAppliedAt(note.getAppliedAt());
         return dto;
     }
 
-    public List<ApplicationNoteDTO> toDtoList(List<ApplicationNote> applicationNotes) {
-        return applicationNotes.stream().map(this::toDto).collect(Collectors.toList());
+    public List<ApplicationNoteDTO> toDtoList(List<ApplicationNote> notes) {
+        return notes.stream()
+                .map(this::toDto)
+                .toList(); // ⬅️ Java 16+ (zamiast collect)
     }
 
     public ApplicationNote toEntity(ApplicationNoteDTO dto) {
-        ApplicationNote applicationNote = new ApplicationNote();
-        applicationNote.setId(dto.getId());
-        applicationNote.setOfferId(dto.getOfferId());
-        applicationNote.setOfferUrl(dto.getOfferUrl());
-        applicationNote.setCompanyName(dto.getCompanyName());
-        applicationNote.setAppliedAt(dto.getAppliedAt());
-        return applicationNote;
+        return ApplicationNote.builder()
+                .id(dto.getId())
+                .userId(dto.getUserId())
+                .offerId(dto.getOfferId())
+                .offerUrl(dto.getOfferUrl())
+                .companyName(dto.getCompanyName())
+                .appliedAt(dto.getAppliedAt())
+                .build();
     }
 }
